[STYLE, ERROR] Fix error overlapping skyIcon and setting svg width and height

--- a/src/assets/_now.scss
+++ b/src/assets/_now.scss
@@ -15,14 +15,9 @@
   width: fit-content;
   .summaryImg{
     position: relative;
-    .weatherIcon , .iconWrap{
+    .skyIcon{
       width: 75px;
       height: 75px;
-    }
-    .iconWrap svg{
-      width: 100%;
-      height:100%;
-      font-size: 100%;
     }
   }
   .summary {
