--- a/src/assets/_skyIcon.scss
+++ b/src/assets/_skyIcon.scss
@@ -1,4 +1,14 @@
+// skyIcon의 크기 조정언 .skyIcon 을 통해서만 !!
+.weatherIcon , 
+.overlapping ,
+.iconWrap,
+.iconWrap svg {
+  width: 100%;
+  height: 100%;
+}
 .weatherIcon {
+
+  position: relative;
   svg{
     fill:inherit
   }
@@ -7,19 +17,37 @@
   display: flex;
   position: relative;
   .behind{
+    width: 80%;
+    height: 80%;
     z-index: 0;
     position: absolute;
     top:0;
     left:0;
+    .iconWrap svg{
+      width:100%  ;
+      height: 100% ;
+    }
+
   }
   .front{
+    width: 60%;
+    height: 60%;
     z-index: 3;
     position: absolute;
-    top:5px;
-    left:10px;
+    top:30%;
+    left:40%;
+    .iconWrap svg{  
+      width: 100%  ;
+      height: 100% ;
+    }
+
   }
 }
-
+.iconWrap{
+  position: absolute;
+  top:0;
+  left: 0;
+}
 .sunnyNightIcon {
   transform: rotateY(180deg);
 }
